--- a/examples/msg_ring/CMakeLists.txt
+++ b/examples/msg_ring/CMakeLists.txt
@@ -4,6 +4,6 @@ project(MpiRing CXX)
 
 find_package(MPI REQUIRED)
 
-add_executable(mpi_ring mpi_ring.cpp)
+add_executable(ring mpi_ring.cpp)
 
 target_link_libraries(mpi_ring PRIVATE MPI::MPI_CXX)
